Fix navigation alignment

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -34,11 +34,16 @@ header {
 
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: center;
 
   nav {
     flex: 1;
     padding-top: 5px;
+  }
+
+  .name,
+  .cross {
+    flex: 0 0 55px;
   }
 
   @media (min-width: 799px) {
@@ -53,6 +58,11 @@ header {
 
   @media (max-width: 500px) {
     padding: 0;
+
+    .name,
+    .cross {
+      flex: auto;
+    }
 
     .name {
       width: 50%;
@@ -106,7 +116,7 @@ header {
       height: 0.9rem;
 
       position: relative;
-      top: 9px;
+      top: 4px;
     }
   }
 }
